    author name within brakets and the comment:

S <mave> comment goes here

   where S can be one of the following symbols:
    '+' : means that something has been added to NNFW
    '-' : means that something has been dropped from NNFW
    'B' : means a BugFix
    'C' : means that something has been changed (e.g. implementation of a Class or a signature method)
==== End of Legend ====
    ==> 253 - 16/01/2008 - 1.0.1 release <==

C <mave> changed the name of SparseMatrixLinker::getMask() to mask()
B <mave> SparseMatrixLinker was not Propertized complaint, 
		added "mask" property and mask/setMask Variant methods
B <mave> corrected version on nnfw-config

    ==> 242 - 16/01/2008 - 1.0.0 release <==

C <mave> BackPropagationAlgo uses AbstractModifier retrievied by Factory
+ <mave> added method in Factory for getting/registering AbstractModifier subclasses
+ <mave> added AbstractModifier hierarchy
+ <mave> added 'cover' method to RealMat

    ==> 241 - 15/01/2008 <==

B <mave> resolved problem on nnfw-config on Mac OSX
+ <mave> implemented BaseNeuralNet::clone()
C <mave> now the setOrder accept 'const UpdatableVec&'
+ <mave> added propertySettings method for retrieving the current status of Propertized objects
- <mave> deleted uility for creating backpropagation algorithm
- <mave> deleted modifier and subclasses;
		it seem enough the deltarule methods added to RealVec & RealMat
- <mave> deleted all classes of previous implementation of learning algorithms
B <mave> resolved a bug in feedForwardNet utility
+ <mave> added assign_reverse method to VectorData that assign the element in revers order
+ <mave> completed the first version of BackPropagationAlgo

    ==> 240 - 10/12/2007 <==

C <mave> changed CMakeLists.txt for better support on Mac OSX

    ==> 238 - 3/12/2007 <==

+ <mave> Propertized and all its subclasses are now clonable via clone() method
+ <mave> added const versions of Cluster::inputs and ::outputs methods