@@ -1,0 +1,25 @@
+IF (NOT NNFW_FOUND)
+
+MESSAGE(STATUS "Using NNFW version @VER_MAJ@.@VER_MIN@.@VER_PAT@")
+MESSAGE(STATUS "Apply the Macro TARGET_USE_NNFW(targetname) for use NNFW")
+
+MACRO( TARGET_USE_NNFW targetname )
+
+GET_TARGET_PROPERTY( OLD1 ${targetname} COMPILE_FLAGS )
+IF ( OLD1 MATCHES NOTFOUND )
+	SET( OLD1 "" )
+ENDIF( OLD1 MATCHES NOTFOUND )
+SET_TARGET_PROPERTIES( ${targetname} PROPERTIES COMPILE_FLAGS "${OLD1} -I@CMAKE_INSTALL_PREFIX@/include @CFLA@" )
+
+GET_TARGET_PROPERTY( OLD2 ${targetname} LINK_FLAGS )
+IF ( OLD2 MATCHES NOTFOUND )
+	SET( OLD2 "" )
+ENDIF( OLD2 MATCHES NOTFOUND )
+SET_TARGET_PROPERTIES( ${targetname} PROPERTIES LINK_FLAGS "${OLD2} @LFLA@" )
+
+TARGET_LINK_LIBRARIES( ${targetname} "nnfw" )
+
+ENDMACRO(TARGET_USE_NNFW)
+
+SET (NNFW_FOUND TRUE)
+ENDIF (NOT NNFW_FOUND)
