@@ -14,6 +14,13 @@ S <mave> comment goes here
     'B' : means a BugFix
     'C' : means that something has been changed (e.g. implementation of a Class or a signature method)
 ==== End of Legend ====
+    ==> 257 - 21/02/2008 <==
+
++ <mave> added NNFWConfig.cmake for helping configuration with CMake
++ <mave> added "--config" to nnfw-config that print-out the NNFW_CONFIG
+C <mave> improved nnfw-config eliminating unecessary flags reported by the script
+C <mave> improved CMake build; added version information to library
+
     ==> 253 - 16/01/2008 - 1.0.1 release <==
 
 C <mave> changed the name of SparseMatrixLinker::getMask() to mask()
